Made e2e app use ci for .env

--- a/.env.ci
+++ b/.env.ci
@@ -6,7 +6,9 @@ PG_USER=postgres
 PG_PASSWORD=postgres
 PG_DATABASE=carpedalan
 PG_PORT=5432
+PG_URI=postgres://postgres:postgres@e2e_pg:5432/carpedalan
 PORT=3001
+
 AWS_ACCESS_KEY_ID=key
 AWS_SECRET_ACCESS_KEY=secret
 S3_BUCKET=carpedev
