--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
           name: Run app
           command: | 
             docker-compose --version
-            aws s3 cp s3://carpedalan-pipeline-prod/.env . 
+            cp .env.ci .env 
             aws s3 cp s3://carpedalan-pipeline-prod/cfkeys/ ./server/cfkeys/ --recursive 
             aws s3 cp s3://carpedalan-pipeline-prod/goodDataWithEtagAndKey.json .
             eval $(aws ecr \
