--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,13 @@ jobs:
     parallelism: 1
     steps:
       - checkout
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
+
       - run: 
           name: Install AWS CLI
           command: |
@@ -134,7 +141,7 @@ jobs:
           name: Build application Docker image
           command: |
             docker build \
-            --target=prod \
+            --target=small \
             -t app \
             -t "${ECR_REPOSITORY}:${CIRCLE_SHA1}" .
 
@@ -174,7 +181,7 @@ jobs:
       - checkout
       - run: 
           name: Install node dependencies
-          command: yarn --ignore-optional
+          command: yarn
       - run: 
           name: Upload S3 assets
           command: |
