--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-preset-jest": "^24.1.0",
     "cypress-dark": "^1.7.11",
+    "cypress-file-upload": "^3.0.7",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
