--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -2,7 +2,7 @@ version: '2.1'
 
 services:
   e2e: 
-    image: cypress/base:10
+    image: 404112572358.dkr.ecr.us-west-2.amazonaws.com/cypress:3.2.0
     links:
       - "e2e_app:local.carpedalan.com"
     environment:
@@ -12,9 +12,9 @@ services:
       PG_HOST: e2e_pg
       CYPRESS_BASE_URL: http://local.carpedalan.com:3001
     working_dir: /app
-    # depends_on:
-    #   e2e_app: 
-    #     condition: service_healthy
+    depends_on:
+      e2e_app: 
+        condition: service_healthy
     volumes: 
       - ./cypress:/app/cypress/
       - ./db:/app/db/
@@ -27,7 +27,7 @@ services:
       - ./node_modules:/app/node_modules
 
 
-    command: bash -c "ls -al && ls cypress -al && pwd && ./node_modules/bin/cypress run --env configFile=ci --reporter junit --reporter-options 'mochaFile=/app/cypress/test-output.xml'"  
+    command: bash -c "ls -al && ls cypress -al && pwd && yarn cypress run --env configFile=ci --reporter junit --reporter-options 'mochaFile=/app/cypress/test-output.xml'"  
     networks:
       - backend
   e2e_app:
@@ -42,8 +42,8 @@ services:
       - ./db:/app/db
       - ./package.json:/app/package.json
       - ./.env.ci:/app/.env
-    # logging: 
-    #   driver: "none"
+    logging: 
+      driver: "none"
 
 
     environment:
