--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   alb:
     container_name: c_alb
     depends_on:
-      app: 
+      carpe: 
         condition: service_healthy
     image: ekino/nginx-brotli:latest-1.12.2-bfd2885
     restart: always
@@ -16,8 +16,8 @@ services:
       - 80:80
       - 443:443
 
-  app:
-    container_name: app
+  carpe:
+    container_name: carpe
     depends_on:
       pg:
         condition: service_healthy
