--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
     log_format custom '$request $status $body_bytes_sent';
     access_log  /var/log/nginx/access.log custom;
     upstream node-app {
-        server app:80 weight=1 max_fails=3 fail_timeout=30s;
+        server carpe:80 weight=1 max_fails=3 fail_timeout=30s;
     }
 
     server {
