--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-preset-jest": "^24.1.0",
+    "codecov": "^3.3.0",
     "cypress-dark": "^1.7.11",
     "cypress-file-upload": "^3.0.7",
     "eslint": "^5.13.0",
