Added badges and codecov

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,7 +140,9 @@ jobs:
 
       - run:
           name: API Integration tests
-          command: yarn integration:ci --coverage
+          command: |
+              yarn integration:ci --coverage
+              codecov
 
       - run: 
           name: Upload Coverage
