--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,6 @@
         "react-transition-group": "^2.3.1",
         "serve-static": "^1.12.3",
         "styled-components": "^4.2.0",
-        "superagent": "^5.0.2",
         "tslib": "^1.9.0"
     },
     "devDependencies": {
@@ -72,11 +71,11 @@
         "@types/d3-shape": "^1.2.6",
         "@types/debug": "^0.0.30",
         "@types/dotenv": "^6.1.1",
-        "@types/enzyme": "^3.1.18",
+        "@types/enzyme": "^3.9.1",
         "@types/express": "^4.0.36",
         "@types/extract-text-webpack-plugin": "^2.1.0",
         "@types/html-webpack-plugin": "^2.28.0",
-        "@types/jest": "^23.3.13",
+        "@types/jest": "^24.0.12",
         "@types/js-yaml": "^3.10.1",
         "@types/lodash": "^4.14.68",
         "@types/long": "^3.0.32",
@@ -86,16 +85,16 @@
         "@types/object-hash": "^1.2.0",
         "@types/pure-render-decorator": "^0.2.27",
         "@types/qs": "^6.5.3",
-        "@types/react": "^16.8.3",
-        "@types/react-dom": "^16.8.1",
-        "@types/react-helmet": "^5.0.3",
-        "@types/react-hot-loader": "^3.0.3",
-        "@types/react-json-tree": "^0.6.8",
-        "@types/react-responsive": "^3.0.1",
-        "@types/react-router-dom": "^4.3.2",
+        "@types/react": "^16.8.17",
+        "@types/react-dom": "^16.8.4",
+        "@types/react-helmet": "^5.0.8",
+        "@types/react-hot-loader": "^4.1.0",
+        "@types/react-json-tree": "^0.6.11",
+        "@types/react-responsive": "^3.0.3",
+        "@types/react-router-dom": "^4.3.3",
         "@types/react-test-renderer": "^16.8.1",
-        "@types/react-virtualized": "^9.18.2",
-        "@types/serve-static": "^1.7.31",
+        "@types/react-virtualized": "^9.21.1",
+        "@types/serve-static": "^1.13.2",
         "@types/shallowequal": "^0.2.3",
         "@types/storybook__addon-actions": "^3.4.1",
         "@types/storybook__addon-knobs": "^3.4.1",
@@ -113,21 +112,22 @@
         "babel-core": "^7.0.0-0",
         "babel-jest": "^23.4.2",
         "babel-loader": "^8.0.0-beta.2",
+        "babel-preset-jest": "^24.6.0",
         "classnames": "^2.2.5",
         "compression-webpack-plugin": "^1.1.11",
         "contrast": "^1.0.1",
-        "copy-to-clipboard": "^3.0.8",
-        "cronstrue": "^1.31.0",
-        "css-loader": "^0.28.4",
-        "d3-dag": "^0.1.2",
-        "d3-shape": "^1.2.2",
-        "debug": "^3.1.0",
-        "enzyme": "^3.8.0",
-        "enzyme-adapter-react-16": "^1.9.1",
+        "copy-to-clipboard": "^3.2.0",
+        "cronstrue": "^1.68.0",
+        "css-loader": "^2.1.1",
+        "d3-dag": "^0.2.5",
+        "d3-shape": "^1.3.5",
+        "debug": "^4.1.1",
+        "enzyme": "^3.9.0",
+        "enzyme-adapter-react-16": "^1.13.0",
         "enzyme-to-json": "^3.3.5",
-        "eslint": "^5.12.1",
-        "eslint-plugin-react-hooks": "^1.0.1",
-        "extract-text-webpack-plugin": "^3.0.0",
+        "eslint": "^5.16.0",
+        "eslint-plugin-react-hooks": "^1.6.0",
+        "extract-text-webpack-plugin": "^3.0.2",
         "favicons-webpack-plugin": "^0.0.9",
         "file-loader": "^1.1.11",
         "fork-ts-checker-webpack-plugin": "^0.4.1",
@@ -137,6 +137,7 @@
         "husky": "^0.14.3",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^23.6.0",
+        "jest-dom": "^3.1.3",
         "jest-styled-components": "^6.3.1",
         "json-schema-to-typescript": "^6.1.3",
         "lint-staged": "^7.0.4",
@@ -148,12 +149,12 @@
         "optimize-css-assets-webpack-plugin": "^4.0.0",
         "prettier": "1.12.1",
         "protobufjs": "~6.8.0",
-        "react": "^16.8.2",
-        "react-dom": "^16.8.2",
+        "react": "^16.9.0-alpha.0",
+        "react-dom": "^16.9.0-alpha.0",
         "react-hot-loader": "^4.8.4",
-        "react-json-tree": "^0.11.0",
+        "react-json-tree": "^0.11.2",
         "react-router-dom": "^5.0.0",
-        "react-test-renderer": "^16.8.2",
+        "react-testing-library": "^7.0.0",
         "react-virtualized": "^9.18.5",
         "resolve-url-loader": "^2.3.0",
         "sass-loader": "^7.0.1",
@@ -173,6 +174,7 @@
         "typescript": "^3.4.1",
         "uglifyjs-webpack-plugin": "^1.2.5",
         "url-search-params": "^0.10.0",
+        "user-event": "^2.0.1",
         "webpack": "^4.29.1",
         "webpack-cli": "^3.2.1",
         "webpack-dev-middleware": "^3.5.1",
