--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Carpe Dalan",
   "main": "index.js",
   "scripts": {
-    "test": "LOG_LEVEL=none jest",
     "lint": "eslint src api-v1 db imageResizer scripts server shared  --ext .js,.jsx",
     "integration": "NODE_ENV=test PG_HOST=localhost PG_PORT=5555 jest -c jestrc.js --runInBand",
     "integration:ci": "PG_HOST=localhost NODE_ENV=ci jest -c jestrc.js --runInBand --verbose",
@@ -28,36 +27,6 @@
   },
   "author": "",
   "license": "ISC",
-  "jest": {
-    "coverageThreshold": {
-      "global": {
-        "statements": 38.5,
-        "branches": 10.5,
-        "functions": 15.5,
-        "lines": 20
-      }
-    },
-    "transformIgnorePatterns": [
-      "node_modules/(?!(react-virtualized|react-select|)/)"
-    ],
-    "roots": [
-      "src"
-    ],
-    "reporters": [
-      "default",
-      "jest-junit"
-    ],
-    "coverageDirectory": "reports/coverage",
-    "coverageReporters": [
-      "json",
-      "lcov",
-      "text",
-      "clover"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/setupTests.js"
-    ]
-  },
   "lint-staged": {
     "*.{js,jsx}": [
       "eslint --fix",
@@ -74,6 +43,7 @@
     "codecov": "^3.3.0",
     "cypress-dark": "^1.7.11",
     "cypress-file-upload": "^3.0.7",
+    "dtsgenerator": "^2.0.6",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
@@ -95,7 +65,7 @@
     "prettier": "^1.16.4",
     "prettier-eslint": "^8.8.2",
     "react-test-renderer": "16.8.0",
-    "supertest": "^3.4.2",
+    "supertest": "^4.0.2",
     "webpack-dev-middleware": "^3.5.1",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-stylish": "^0.1.8"
@@ -132,7 +102,7 @@
     "prop-types": "^15.6.2",
     "qs": "^6.6.0",
     "request": "^2.88.0",
-    "superagent": "^4.1.0",
+    "superagent": "^5.0.5",
     "swagger-ui-express": "^4.0.2",
     "uuid": "^3.3.2",
     "winston": "^3.2.1",
