--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,7 +10,7 @@
       "importHelpers": true,
       "jsx": "react",
       "lib": ["es2015", "es2017", "dom", "dom.iterable"],
-      "module": "commonjs",
+      "module": "esnext",
       "moduleResolution": "node",
       "noFallthroughCasesInSwitch": true,
       "noImplicitReturns": true,
