--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,9 @@
         "react-responsive": "^4.1.0",
         "react-router": "^5.0.0",
         "react-transition-group": "^2.3.1",
+        "react-virtualized-auto-sizer": "^1.0.2",
+        "react-window": "^1.8.2",
+        "react-window-infinite-loader": "^1.0.3",
         "serve-static": "^1.12.3",
         "styled-components": "^4.2.0",
         "tslib": "^1.9.0"
@@ -95,6 +98,8 @@
         "@types/react-router-dom": "^4.3.3",
         "@types/react-test-renderer": "^16.8.1",
         "@types/react-virtualized": "^9.21.1",
+        "@types/react-virtualized-auto-sizer": "^1.0.0",
+        "@types/react-window": "^1.8.0",
         "@types/serve-static": "^1.13.2",
         "@types/shallowequal": "^0.2.3",
         "@types/storybook__addon-actions": "^3.4.1",
