--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,7 +10,7 @@
       "importHelpers": true,
       "jsx": "react",
       "lib": ["es2015", "es2017", "dom", "dom.iterable"],
-      "module": "esnext",
+      "module": "commonjs",
       "moduleResolution": "node",
       "noFallthroughCasesInSwitch": true,
       "noImplicitReturns": true,
@@ -20,6 +20,7 @@
       "removeComments": false,
       "resolveJsonModule": true,
       "skipLibCheck": true,
+      "esModuleInterop": true,
       "sourceMap": true,
       "strict": true,
       "target": "es6",
