--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - 443:443
 
   api:
-    container_name: api
+    container_name: c_api
     depends_on:
       pg:
         condition: service_healthy
