--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,11 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "browser-preview",
+      "request": "attach",
+      "name": "Browser Preview: Attach"
+  },    
+    {
       "type": "node",
       "request": "attach",
       "name": "Server",
