--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,7 +10,7 @@
       "importHelpers": true,
       "jsx": "react",
       "lib": ["es2015", "es2017", "dom", "dom.iterable"],
-      "module": "commonjs",
+      "module": "esnext",
       "moduleResolution": "node",
       "noFallthroughCasesInSwitch": true,
       "noImplicitReturns": true,
@@ -20,9 +20,26 @@
       "removeComments": false,
       "resolveJsonModule": true,
       "skipLibCheck": true,
+      "esModuleInterop": true,
       "sourceMap": true,
       "strict": true,
       "target": "es6",
-      "types": ["node", "webpack-env", "jest"]
+      "types": ["node", "webpack-env", "jest"],
+      "plugins": [
+        {
+          "name": "typescript-tslint-plugin",
+          "alwaysShowRuleFailuresAsWarnings": false,
+          "ignoreDefinitionFiles": true,
+          "configFile": "./tslint.json",
+          "suppressWhileTypeErrorsPresent": false
+        },
+        {
+          "transform": "typescript-plugin-styled-components",
+          "type": "config",
+
+          // other typescript-plugin-styled-components options can be added here
+          "minify": true,
+      }        
+      ]
   }
 }
