--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,12 @@ workflows:
     jobs:
       - build
       - dependencies
-      # - unit_test:
-      #     requires:
-      #       - dependencies
-      # - lint:
-      #     requires:
-      #       - dependencies
+      - unit_test:
+          requires:
+            - dependencies
+      - lint:
+          requires:
+            - dependencies
       - integration:
           requires:
             - dependencies
@@ -27,9 +27,10 @@ workflows:
       - deploy: 
           requires: 
             # - e2e
-            # - lint
+            - lint
+            - build
             - integration
-            # - unit_test
+            - unit_test
 
 
 jobs:
@@ -44,9 +45,16 @@ jobs:
           name: Install node dependencies
           command: yarn
 
+      - run: 
+          name: Install client dependencies
+          command: |
+            cd client
+            yarn
+
       - save_cache:
           paths:
             - node_modules
+            - client/node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
 
@@ -70,10 +78,15 @@ jobs:
             pip install \
               docker-compose==1.22.0 \
               awscli==1.15.82
+              
 
       - run: 
           name: Set env
           command: ./scripts/setenv.sh
+
+      - run: 
+          name: Build Client
+          command: ./scripts/buildClient.sh
 
       - run: 
           name: Get config
@@ -98,6 +111,11 @@ jobs:
           name: "ESLint"
           command: yarn lint --format junit -o reports/junit/js-lint-results.xml
 
+      - run:
+          name: "TSLint"
+          command: |
+            cd client && yarn lint
+
       - store_test_results:
           path: reports/junit
 
@@ -119,7 +137,7 @@ jobs:
           name: "Jest FE"
           environment:
             JEST_JUNIT_OUTPUT: reports/junit/js-test-results.xml
-          command: yarn test --ci --testResultsProcessor="jest-junit" --coverage --verbose
+          command: cd client && yarn test --ci --coverage --verbose
 
       - store_test_results:
           path: reports/
