--- a/client/package.json
+++ b/client/package.json
@@ -1,112 +1,113 @@
 {
-    "scripts": {
-        "build:prod": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' NODE_ENV=production webpack --config webpack.config.prod.js --mode=production",
-        "build": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' webpack --config webpack.config.js --mode=development",
-        "clean": "rm -rf dist",
-        "lint": "tslint --project .",
-        "mockApi": "node ./mockApi",
-        "prebuild": "yarn run clean",
-        "precommit": "lint-staged",
-        "start": "node -r dotenv/config index.js",
-        "tdd": "yarn run test --watch --verbose false",
-        "test": "NODE_ENV=test jest --config=jest.config.js"
-    },
-    "lint-staged": {
-        "*.{ts,tsx}": [
-            "eslint",
-            "tslint --fix",
-            "git add"
-        ],
-        "*.{js,json,scss}": [
-            "prettier --write",
-            "git add"
-        ]
-    },
-    "dependencies": {
-        "@types/react-router": "^5.0.0",
-        "date-fns": "2.0.0-alpha.26",
-        "lodash": "^4.17.4",
-        "react": "^16.9.0-alpha.0",
-        "react-dom": "^16.9.0-alpha.0",
-        "react-router": "^5.0.0",
-        "react-router-dom": "^5.0.0",
-        "react-virtualized": "^9.21.1",
-        "react-virtualized-auto-sizer": "^1.0.2",
-        "react-window": "^1.8.2",
-        "react-window-infinite-loader": "^1.0.3",
-        "styled-components": "^4.2.0",
-        "tslib": "^1.9.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.0.0",
-        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-        "@babel/preset-env": "^7.0.0",
-        "@hot-loader/react-dom": "^16.8.6",
-        "@types/debug": "^0.0.30",
-        "@types/dotenv": "^6.1.1",
-        "@types/enzyme": "^3.9.1",
-        "@types/express": "^4.0.36",
-        "@types/extract-text-webpack-plugin": "^2.1.0",
-        "@types/html-webpack-plugin": "^2.28.0",
-        "@types/jest": "^24.0.12",
-        "@types/lodash": "^4.14.68",
-        "@types/long": "^3.0.32",
-        "@types/qs": "^6.5.3",
-        "@types/react": "^16.8.17",
-        "@types/react-dom": "^16.8.4",
-        "@types/react-helmet": "^5.0.8",
-        "@types/react-hot-loader": "^4.1.0",
-        "@types/react-router-dom": "^4.3.3",
-        "@types/react-test-renderer": "^16.8.1",
-        "@types/react-virtualized-auto-sizer": "^1.0.0",
-        "@types/react-window": "^1.8.0",
-        "@types/styled-components": "^4.1.14",
-        "@types/superagent": "^4.1.1",
-        "@types/webpack": "^4.1.3",
-        "@types/webpack-dev-middleware": "^1.9.2",
-        "@types/webpack-env": "^1.13.1",
-        "@types/webpack-hot-middleware": "^2.15.0",
-        "@typescript-eslint/parser": "^1.0.0",
-        "axios": "^0.18.0",
-        "babel-jest": "^23.4.2",
-        "babel-loader": "^8.0.0-beta.2",
-        "babel-preset-jest": "^24.6.0",
-        "compression-webpack-plugin": "^3.0.0",
-        "debug": "^4.1.1",
-        "enzyme": "^3.9.0",
-        "enzyme-adapter-react-16": "^1.13.0",
-        "enzyme-to-json": "^3.3.5",
-        "eslint": "^5.16.0",
-        "eslint-plugin-react-hooks": "^1.6.0",
-        "express": "^4.14.0",
-        "fork-ts-checker-webpack-plugin": "^0.4.1",
-        "happypack": "^5.0.0-beta.3",
-        "husky": "^0.14.3",
-        "jest": "^23.6.0",
-        "jest-dom": "^3.1.3",
-        "jest-styled-components": "^6.3.1",
-        "lint-staged": "^7.0.4",
-        "prettier": "1.12.1",
-        "react-hot-loader": "^4.8.4",
-        "react-testing-library": "^7.0.0",
-        "ts-jest": "^23.10.5",
-        "ts-loader": "^5.3.3",
-        "tslint": "^5.12.1",
-        "tslint-config-airbnb": "^5.8.0",
-        "tslint-config-prettier": "^1.18.0",
-        "tslint-plugin-prettier": "^1.3.0",
-        "tslint-react": "^3.6.0",
-        "typedoc": "^0.14.2",
-        "typescript": "^3.5.1",
-        "webpack": "^4.29.1",
-        "webpack-bundle-analyzer": "^3.3.2",
-        "webpack-cli": "^3.2.1",
-        "webpack-dev-middleware": "^3.5.1",
-        "webpack-hot-middleware": "^2.24.3",
-        "webpack-hot-server-middleware": "^0.5.0",
-        "webpack-manifest-plugin": "^2.0.4",
-        "webpack-s3-plugin": "^1.0.3",
-        "webpack-stats-plugin": "^0.2.1",
-        "webpack-stylish": "^0.1.8"
-    }
+  "scripts": {
+    "build:prod": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' NODE_ENV=production webpack --config webpack.config.prod.js --mode=production",
+    "build": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' webpack --config webpack.config.js --mode=development",
+    "clean": "rm -rf dist",
+    "lint": "tslint --project .",
+    "mockApi": "node ./mockApi",
+    "prebuild": "yarn run clean",
+    "precommit": "lint-staged",
+    "start": "node -r dotenv/config index.js",
+    "tdd": "yarn run test --watch --verbose false",
+    "test": "NODE_ENV=test jest --config=jest.config.js"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "tslint --fix",
+      "git add"
+    ],
+    "*.{js,json,scss}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "dependencies": {
+    "@types/react-router": "^5.0.2",
+    "date-fns": "2.0.0-alpha.37",
+    "lodash": "^4.17.11",
+    "react": "^16.9.0-alpha.0",
+    "react-dom": "^16.9.0-alpha.0",
+    "react-is": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-virtualized": "^9.21.1",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.3",
+    "react-window-infinite-loader": "^1.0.3",
+    "styled-components": "^5.0.0-beta.5",
+    "stylis": "^3.5.4",
+    "tslib": "^1.9.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.4.5",
+    "@hot-loader/react-dom": "^16.8.6",
+    "@testing-library/react": "^8.0.4",
+    "@types/debug": "^4.1.4",
+    "@types/dotenv": "^6.1.1",
+    "@types/enzyme": "^3.9.4",
+    "@types/express": "^4.17.0",
+    "@types/extract-text-webpack-plugin": "^3.0.4",
+    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/jest": "^24.0.15",
+    "@types/lodash": "^4.14.134",
+    "@types/long": "^4.0.0",
+    "@types/qs": "^6.5.3",
+    "@types/react": "^16.8.22",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-helmet": "^5.0.8",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/react-test-renderer": "^16.8.2",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.0",
+    "@types/styled-components": "^4.1.16",
+    "@types/superagent": "^4.1.1",
+    "@types/webpack": "^4.4.33",
+    "@types/webpack-dev-middleware": "^2.0.2",
+    "@types/webpack-env": "^1.13.9",
+    "@types/webpack-hot-middleware": "^2.16.5",
+    "axios": "^0.19.0",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
+    "babel-preset-jest": "^24.6.0",
+    "compression-webpack-plugin": "^3.0.0",
+    "debug": "^4.1.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.3.5",
+    "eslint": "^6.0.0",
+    "express": "^4.17.1",
+    "fork-ts-checker-webpack-plugin": "^1.3.7",
+    "happypack": "^5.0.1",
+    "husky": "^2.4.1",
+    "jest": "^24.8.0",
+    "jest-dom": "^3.5.0",
+    "lint-staged": "^8.2.1",
+    "prettier": "1.18.2",
+    "react-hot-loader": "^4.11.1",
+    "react-testing-library": "^8.0.1",
+    "ts-jest": "^24.0.2",
+    "ts-loader": "^6.0.4",
+    "tslint": "^5.18.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^4.0.0",
+    "tslint-react-hooks": "^2.1.1",
+    "typedoc": "^0.14.2",
+    "typescript": "^3.5.2",
+    "typescript-styled-plugin": "^0.14.0",
+    "webpack": "^4.35.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-hot-server-middleware": "^0.6.0",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-s3-plugin": "^1.0.3",
+    "webpack-stats-plugin": "^0.2.1",
+    "webpack-stylish": "^0.1.8"
+  }
 }
