--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,13 @@ nginx/*.pem
 upload/*
 scripts/touch.js
 commands.sh
+dev-dump.sql
+/bin/
+node_modules/
+**/node_modules/
+.coverage
+docs
+coverage
+dist
+*.zip
+.sql
