--- a/client/package.json
+++ b/client/package.json
@@ -22,28 +22,28 @@
     ]
   },
   "dependencies": {
-    "@types/react-router": "^5.0.2",
+    "@types/react-router": "^5.0.3",
     "date-fns": "2.0.0-alpha.37",
-    "lodash": "^4.17.11",
-    "react": "^16.9.0-alpha.0",
-    "react-dom": "^16.9.0-alpha.0",
-    "react-is": "^16.8.6",
+    "lodash": "^4.17.15",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-is": "^16.9.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-virtualized": "^9.21.1",
     "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.3",
+    "react-window": "^1.8.5",
     "react-window-infinite-loader": "^1.0.3",
     "styled-components": "^5.0.0-beta.5",
     "stylis": "^3.5.4",
-    "tslib": "^1.9.0"
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
+    "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@hot-loader/react-dom": "^16.8.6",
-    "@testing-library/react": "^8.0.4",
+    "@testing-library/react": "^8.0.7",
     "@types/debug": "^4.1.4",
     "@types/dotenv": "^6.1.1",
     "@types/enzyme": "^3.9.4",
@@ -51,7 +51,7 @@
     "@types/extract-text-webpack-plugin": "^3.0.4",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/jest": "^24.0.15",
-    "@types/lodash": "^4.14.134",
+    "@types/lodash": "^4.14.135",
     "@types/long": "^4.0.0",
     "@types/qs": "^6.5.3",
     "@types/react": "^16.8.22",
@@ -64,8 +64,8 @@
     "@types/react-window": "^1.8.0",
     "@types/styled-components": "^4.1.16",
     "@types/superagent": "^4.1.1",
-    "@types/webpack": "^4.4.33",
-    "@types/webpack-dev-middleware": "^2.0.2",
+    "@types/webpack": "^4.4.34",
+    "@types/webpack-dev-middleware": "^2.0.3",
     "@types/webpack-env": "^1.13.9",
     "@types/webpack-hot-middleware": "^2.16.5",
     "axios": "^0.19.0",
@@ -77,37 +77,37 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
-    "eslint": "^6.0.0",
+    "eslint": "^6.1.0",
     "express": "^4.17.1",
-    "fork-ts-checker-webpack-plugin": "^1.3.7",
+    "fork-ts-checker-webpack-plugin": "^1.4.3",
     "happypack": "^5.0.1",
-    "husky": "^2.4.1",
+    "husky": "^3.0.1",
     "jest": "^24.8.0",
     "jest-dom": "^3.5.0",
-    "lint-staged": "^8.2.1",
+    "lint-staged": "^9.2.1",
     "prettier": "1.18.2",
-    "react-hot-loader": "^4.11.1",
+    "react-hot-loader": "^4.12.10",
     "react-testing-library": "^8.0.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
-    "tslint": "^5.18.0",
+    "tslint": "^5.20.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^4.0.0",
-    "tslint-react-hooks": "^2.1.1",
-    "typedoc": "^0.14.2",
-    "typescript": "^3.5.2",
+    "tslint-react-hooks": "^2.2.1",
+    "typedoc": "^0.15.0",
+    "typescript": "^3.7.0-beta",
     "typescript-styled-plugin": "^0.14.0",
-    "webpack": "^4.35.0",
+    "webpack": "^4.37.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.4",
+    "webpack-cli": "^3.3.6",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-hot-server-middleware": "^0.6.0",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-s3-plugin": "^1.0.3",
-    "webpack-stats-plugin": "^0.2.1",
+    "webpack-stats-plugin": "^0.3.0",
     "webpack-stylish": "^0.1.8"
   }
 }
