--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@testing-library/react": "^8.0.4",
+    "@types/node": "^8.0.0",
     "babel-eslint": "^10.0.2",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-preset-jest": "^24.1.0",
@@ -66,9 +67,16 @@
     "prettier-eslint": "^8.8.2",
     "superagent": "^5.0.5",
     "supertest": "^4.0.2",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint": "^5.20.0",
+    "tslint-config-airbnb": "^5.11.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "typescript": "^3.6.3"
   },
   "dependencies": {
+    "@pulumi/aws": "^1.6.0",
+    "@pulumi/awsx": "^0.18.12",
+    "@pulumi/pulumi": "^1.3.1",
     "@sentry/node": "^4.5.3",
     "aws-cloudfront-sign": "^2.2.0",
     "aws-sdk": "^2.493.0",
