Added lambda deploys with layers and SAM setup

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "express-openapi": "^4.4.0",
     "express-session": "^1.15.6",
     "express-winston": "^3.1.0",
+    "folder-hash": "^3.3.0",
     "knex": "^0.16.3",
     "lodash": "^4.17.11",
     "logrocket": "^1.0.3",
