Lots of pulumi stuff * Added policies to ECS * Added lambda deploy * moved some files around * Added a bunch of secrets for ECS * commented out sentry

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "private": true,
+  "workspaces": ["./server", "./client"],
   "name": "carpedalan",
   "version": "2.0.0",
   "description": "Carpe Dalan",
@@ -13,7 +15,7 @@
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
     "migrateAndStart": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
     "start": "DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
-    "start:prod": "NODE_ENV=production node .",
+    "start:prod": "MIGRATING=true NODE_ENV=production ./scripts/migrate.sh && NODE_ENV=production node .",
     "u": "docker-compose up",
     "d": "docker-compose down",
     "du": "docker-compose down && docker-compose up",
@@ -93,7 +95,7 @@
     "express-session": "^1.15.6",
     "express-winston": "^3.1.0",
     "folder-hash": "^3.3.0",
-    "knex": "^0.16.3",
+    "knex": "^0.20.0",
     "lodash": "^4.17.11",
     "logrocket": "^1.0.3",
     "moment": "^2.24.0",
