--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,19 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
   "workbench.colorCustomizations": {
-    "activityBar.background": "#7d6388",
-    "activityBar.activeBorder": "#aea590",
+    "activityBar.background": "#3a2c45",
+    "activityBar.activeBorder": "#75624a",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#aea590",
-    "activityBarBadge.foreground": "#15202b",
-    "titleBar.activeBackground": "#624e6b",
-    "titleBar.inactiveBackground": "#624e6b99",
+    "activityBarBadge.background": "#75624a",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "titleBar.activeBackground": "#201826",
+    "titleBar.inactiveBackground": "#20182699",
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "statusBar.background": "#624e6b",
-    "statusBarItem.hoverBackground": "#7d6388",
+    "statusBar.background": "#201826",
+    "statusBarItem.hoverBackground": "#3a2c45",
     "statusBar.foreground": "#e7e7e7"
   },
-  "peacock.color": "#624e6b"
+  "peacock.color": "#201826"
 }
