--- a/imageResizer/template.yaml
+++ b/imageResizer/template.yaml
@@ -24,5 +24,5 @@ Resources:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: /hello
-            Method: get
+            Method: post
 
