--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     ]
   },
   "dependencies": {
-    "@types/react-router": "^5.0.3",
+    
     "date-fns": "2.0.0-alpha.37",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
@@ -37,77 +37,71 @@
     "react-window": "^1.8.5",
     "react-window-infinite-loader": "^1.0.3",
     "styled-components": "^5.0.0-beta.5",
-    "stylis": "^3.5.4",
-    "tslib": "^1.10.0"
+    "tslib": "^1.10.0",
+    "typescript": "^3.7.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.4.5",
-    "@hot-loader/react-dom": "^16.8.6",
-    "@testing-library/react": "^8.0.7",
-    "@types/debug": "^4.1.4",
-    "@types/dotenv": "^6.1.1",
-    "@types/enzyme": "^3.9.4",
-    "@types/express": "^4.17.0",
+    "@types/react-router": "^5.0.3",
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@babel/preset-env": "^7.7.6",
+    "@hot-loader/react-dom": "^16.11.0",
+    "@testing-library/react": "^9.4.0",
+    "@types/debug": "^4.1.5",
+    "@types/enzyme": "^3.10.4",
+    "@types/express": "^4.17.2",
     "@types/extract-text-webpack-plugin": "^3.0.4",
-    "@types/html-webpack-plugin": "^3.2.0",
-    "@types/jest": "^24.0.15",
-    "@types/lodash": "^4.14.135",
+    "@types/html-webpack-plugin": "^3.2.1",
+    "@types/jest": "^24.0.23",
+    "@types/lodash": "^4.14.149",
     "@types/long": "^4.0.0",
-    "@types/qs": "^6.5.3",
+    "@types/qs": "^6.9.0",
     "@types/react": "^16.8.22",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-helmet": "^5.0.8",
-    "@types/react-hot-loader": "^4.1.0",
-    "@types/react-router-dom": "^4.3.4",
-    "@types/react-test-renderer": "^16.8.2",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-helmet": "^5.0.14",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/react-test-renderer": "^16.9.1",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
-    "@types/react-window": "^1.8.0",
-    "@types/styled-components": "^4.1.16",
-    "@types/superagent": "^4.1.1",
-    "@types/webpack": "^4.4.34",
+    "@types/react-window": "^1.8.1",
+    "@types/styled-components": "^4.4.1",
+    "@types/superagent": "^4.1.4",
+    "@types/webpack": "^4.41.0",
     "@types/webpack-dev-middleware": "^2.0.3",
-    "@types/webpack-env": "^1.13.9",
-    "@types/webpack-hot-middleware": "^2.16.5",
+    "@types/webpack-env": "^1.14.1",
+    "@types/webpack-hot-middleware": "^2.25.0",
     "axios": "^0.19.0",
-    "babel-jest": "^24.8.0",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
-    "babel-preset-jest": "^24.6.0",
-    "compression-webpack-plugin": "^3.0.0",
+    "babel-preset-jest": "^24.9.0",
+    "compression-webpack-plugin": "^3.0.1",
     "debug": "^4.1.1",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.3.5",
-    "eslint": "^6.1.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.3",
+    "eslint": "^6.7.2",
     "express": "^4.17.1",
-    "fork-ts-checker-webpack-plugin": "^1.4.3",
+    "fork-ts-checker-webpack-plugin": "^3.1.1",
     "happypack": "^5.0.1",
-    "husky": "^3.0.1",
     "jest": "^24.8.0",
-    "jest-dom": "^3.5.0",
-    "lint-staged": "^9.2.1",
-    "prettier": "1.18.2",
-    "react-hot-loader": "^4.12.10",
-    "react-testing-library": "^8.0.1",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.4",
-    "tslint": "^5.20.0",
-    "tslint-config-airbnb": "^5.11.1",
+    "prettier": "1.19.1",
+    "react-hot-loader": "^4.12.18",
+    "ts-jest": "^24.2.0",
+    "ts-loader": "^6.2.1",
+    "tslint": "^5.20.1",
+    "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^4.0.0",
+    "tslint-react": "^4.1.0",
     "tslint-react-hooks": "^2.2.1",
-    "typedoc": "^0.15.0",
-    "typescript": "^3.7.0-beta",
-    "typescript-styled-plugin": "^0.14.0",
-    "webpack": "^4.37.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-middleware": "^3.7.0",
+    "typedoc": "^0.15.4",
+    "typescript-styled-plugin": "^0.15.0",
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-hot-server-middleware": "^0.6.0",
-    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-manifest-plugin": "^2.2.0",
     "webpack-s3-plugin": "^1.0.3",
     "webpack-stats-plugin": "^0.3.0",
     "webpack-stylish": "^0.1.8"
