--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     ]
   },
   "dependencies": {
-    
+    "@testing-library/jest-dom": "^4.2.4",
     "date-fns": "2.0.0-alpha.37",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
@@ -41,7 +41,6 @@
     "typescript": "^3.7.3"
   },
   "devDependencies": {
-    "@types/react-router": "^5.0.3",
     "@babel/core": "^7.7.5",
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
@@ -59,6 +58,7 @@
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.9.4",
     "@types/react-helmet": "^5.0.14",
+    "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-test-renderer": "^16.9.1",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
