--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,15 +3,30 @@ WORKDIR /app
 COPY yarn.lock .
 
 COPY package.json .
-RUN apk add curl=7.64.0-r1 git=2.20.1-r0
+RUN apk add curl git
 RUN yarn --production --ignore-optional
-COPY . .
+COPY server/ ./server
+COPY shared/ ./shared
+COPY .env.example .
+COPY index.js . 
 COPY scripts/ ./scripts
 COPY db/ ./db
 EXPOSE 3001
 
-FROM base as prod
+FROM base AS dev
+RUN apk add postgresql
+RUN yarn --ignore-optional
 COPY .env .
+COPY nodemon.json .
+# COPY webpack.prod.js .
+# RUN NODE_ENV=production yarn build
+COPY webpack.config.js .
+EXPOSE 9229
+
+FROM base as prod
+
+COPY .env .
+
 ARG CRICLE_SHA1
 ARG CIRCLE_BUILD_NUM
 ARG CIRCLE_BRANCH
@@ -19,28 +34,8 @@ ENV CIRCLE_SHA1=$CIRCLE_SHA1
 ENV CIRCLE_BUILD_NUM=$CIRCLE_BUILD_NUM
 ENV CIRCLE_BRANCH=$CIRCLE_BRANCH
 ENV NODE_ENV=production
-EXPOSE 80
-EXPOSE 514
-EXPOSE 6514
-
 
 CMD ["yarn", "start:prod"]
 
 
-FROM base AS dev
-RUN yarn --ignore-optional
-COPY .env .
-COPY nodemon.json .
-# COPY webpack.prod.js .
-# RUN NODE_ENV=production yarn build
-EXPOSE 9229
 
-# FROM gcr.io/distroless/nodejs as small
-# COPY --from=prod /app /
-# ENV NODE_ENV=production
-# EXPOSE 80
-# EXPOSE 514
-# EXPOSE 6514
-
-
-# CMD ["index.js"]
