--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
     "statusBarItem.hoverBackground": "#3a2c45",
     "statusBar.foreground": "#e7e7e7"
   },
-  "peacock.color": "#201826"
+  "peacock.color": "#201826",
+  "debug.node.autoAttach": "on"
 }
