--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,13 @@ services:
     depends_on:
       carpe_api: 
         condition: service_healthy
-    image: ekino/nginx-brotli:latest-1.12.2-bfd2885
+    image: nginx
     restart: always
     volumes: 
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/local.carpedalan.com.pem:/etc/ssl/certs/local.carpedalan.com.pem
       - ./nginx/local.carpedalan.com-key.pem:/etc/ssl/private/local.carpedalan.com-key.pem
+      - ./client/dist:/assets/
     ports:
       - 443:443
 
@@ -23,25 +24,26 @@ services:
     tty: true
     build:
       context: .
+      dockerfile: ./server/Dockerfile
       target: dev
     volumes:
-      - './nodemon.json:/app/nodemon.json:delegated'
       - './server:/app/server:delegated'
+      - './client/dist:/app/server/dist'
       - './scripts:/app/scripts:delegated'
       - './index.js:/app/index.js:delegated'
       - './db:/app/db:delegated'
       - './shared:/app/shared:delegated'
-      - './goodDataWithEtagAndKey.json:/app/goodDataWithEtagAndKey.json'
       - './.env-local:/app/.env'
       - './dev-dump.sql:/app/dev-dump.sql'
     ports:
-      - 3001:80
       - 9227:9229
     environment:
-      PORT: 80
+      PORT: 8001
+      PROD_BUILD: "${PROD_BUILD-false}"
+      ASSET_CDN_DOMAIN: cdn.local.carpedalan.com
     command: yarn migrateAndStart
     healthcheck:
-      test: ["CMD-SHELL", "curl --silent --fail localhost:80/healthcheck || exit 1"]
+      test: ["CMD-SHELL", "curl --silent --fail localhost:8001/healthcheck || exit 1"]
       interval: 1s
       timeout: 1s
       retries: 40
@@ -51,16 +53,21 @@ services:
     container_name: client
     build:
       context: ./client
+      target: dev
+    environment:
+      NODE_ENV: "${NODE_ENV-development}"
+      PROD_BUILD: "${PROD_BUILD-false}"
     volumes: 
       - ./client/src:/app/src
       - ./client/docs:/app/docs
+      - ./client/dist:/app/dist
       - ./client/webpack.config.js:/app/webpack.config.js
+      - ./client/webpack.config.prod.js:/app/webpack.config.prod.js
       - ./client/devServer.js:/app/devServer.js
+      - ./client/docker-entry.sh:/app/docker-entry.sh
+    command: ['./docker-entry.sh']
 
   pg:
-    logging: 
-      driver: "none"
-
     image: postgres:10.0-alpine
     container_name: pg
     environment:
@@ -76,8 +83,6 @@ services:
       retries: 20
 
   pg_test:
-    logging: 
-      driver: "none"
     image: postgres:10.0-alpine
     container_name: test
     environment:
@@ -94,8 +99,6 @@ services:
       retries: 20
 
   pg_migrate:
-    logging: 
-      driver: "none"
     container_name: migrate
     environment: 
       NODE_ENV: test
@@ -111,22 +114,37 @@ services:
       - ./shared:/app/shared:delegated
     build:
       context: .
+      dockerfile: ./server/Dockerfile
       target: dev
     command: yarn migrate
-
-  # aws:
-  #   container_name: aws
-  #   healthcheck: 
-  #     test: "bash -c 'AWS_ACCESS_KEY_ID=fake AWS_SECRET_ACCESS_KEY=fake aws --endpoint-url=http://localhost:4572 s3 ls'"    
-  #     interval: 10s
-  #     timeout: 5s
-  #     retries: 30
-  #   image: localstack/localstack:0.10.5
-  #   environment:
-  #     - DEBUG=1
-  #     - DATA_DIR=/tmp/localstack/data
-  #     - PORT_WEB_UI=8081
-  #   ports:
-  #     - "4567-4595:4567-4595"
-  #     - "${PORT_WEB_UI-8081}:${PORT_WEB_UI-8081}"    
+  sam:
+    build: 
+      context: ./imageresizer
+      dockerfile: Dockerfile
+    command: ["$PWD"]
+    ports:
+      - "3001:3001"
+      - "5858:5858"
+    volumes:
+      - ./imageresizer:/app
+      - /var/run/docker.sock:/var/run/docker.sock
+  aws:
+    container_name: aws
+    # healthcheck: 
+    #   test: "bash -c 'AWS_ACCESS_KEY_ID=fake AWS_SECRET_ACCESS_KEY=fake aws --endpoint-url=http://localhost:4572 s3 ls'"    
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 30
+    image: localstack/localstack:0.10.5
+    volumes:
+      - './.localstack:/tmp/localstack'
+      - '/var/run/docker.sock:/var/run/docker.sock'    
+    environment:
+      - DEBUG=1
+      - DATA_DIR=/tmp/localstack/data
+      - PORT_WEB_UI=8081
+      - SERVICES=s3
+    ports:
+      - "4567-4595:4567-4595"
+      - "${PORT_WEB_UI-8081}:${PORT_WEB_UI-8081}"    
 
