--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "private": true,
-  "workspaces": ["./server", "./client"],
+  "workspaces": [
+    "./server",
+    "./client"
+  ],
   "name": "carpedalan",
   "version": "2.0.0",
   "description": "Carpe Dalan",
@@ -14,7 +17,7 @@
     "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
     "migrateAndStart": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
-    "start": "DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
+    "start": "./scripts/development/start.sh",
     "start:prod": "MIGRATING=true NODE_ENV=production ./scripts/migrate.sh && NODE_ENV=production node .",
     "u": "docker-compose up",
     "d": "docker-compose down",
@@ -36,17 +39,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@testing-library/react": "^8.0.4",
-    "@types/node": "^8.0.0",
-    "babel-eslint": "^10.0.2",
-    "babel-plugin-dynamic-import-node": "^2.2.0",
-    "babel-preset-jest": "^24.1.0",
-    "codecov": "^3.3.0",
-    "cypress-dark": "^1.7.11",
-    "cypress-file-upload": "^3.0.7",
-    "dtsgenerator": "^2.0.6",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@types/node": "^13.1.5",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-preset-jest": "^24.9.0",
+    "codecov": "^3.6.1",
+    "cypress-dark": "^1.7.14",
+    "cypress-file-upload": "^3.5.3",
+    "dtsgenerator": "^2.3.2",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
@@ -69,43 +71,16 @@
     "prettier-eslint": "^8.8.2",
     "superagent": "^5.0.5",
     "supertest": "^4.0.2",
-    "tslint": "^5.20.0",
+    "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.7.2"
+    "tslint-plugin-prettier": "^2.1.0",
+    "typescript": "^3.7.4"
   },
   "dependencies": {
     "@pulumi/aws": "^1.6.0",
     "@pulumi/awsx": "^0.18.12",
-    "@pulumi/pulumi": "^1.3.1",
-    "@sentry/node": "^4.5.3",
-    "aws-cloudfront-sign": "^2.2.0",
-    "aws-sdk": "^2.493.0",
-    "body-parser": "^1.18.3",
-    "connect-pg-simple": "^5.0.0",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.5",
-    "dotenv-safe": "^6.1.0",
-    "esm": "^3.2.22",
-    "express": "^4.16.4",
-    "express-cache-controller": "^1.1.0",
-    "express-handlebars": "^3.0.0",
-    "express-openapi": "^4.4.0",
-    "express-session": "^1.15.6",
-    "express-winston": "^3.1.0",
-    "folder-hash": "^3.3.0",
-    "knex": "^0.20.0",
-    "lodash": "^4.17.11",
-    "logrocket": "^1.0.3",
-    "moment": "^2.24.0",
-    "nodemon": "^1.18.9",
-    "pg": "^7.8.0",
-    "qs": "^6.6.0",
-    "swagger-ui-express": "^4.0.2",
-    "uuid": "^3.3.2",
-    "winston": "^3.2.1",
-    "winston-loggly-bulk": "https://github.com/loggly/winston-loggly-bulk.git#3.x"
+    "@pulumi/pulumi": "^1.3.1"
   },
   "optionalDependencies": {
     "cypress": "3.2.0"
