Lots of build stuff * Split out docker-compose into base * Added whitelist-style dockerignores * Some package cleanup and upgrades * Use eslint-airbnb-base

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,12 @@
-.git
-.DS_Store
-.gitignore
-/client/node_modules
-/src
-node_modules
-/photos
-/nginx
-/cypress
-/coverage
-/.vscode
-/server/node_modules
+*
+!server
+!shared
+!index.js
+!scripts
+!db
+!.env*
+!dev-dump.sql
+!client
+client/node_modules
+server/node_modules
+server/Dockerfile
