--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -54,7 +54,7 @@ http {
     log_format custom '$request $status';
     access_log  /var/log/nginx/access.log custom;
     upstream node-app {
-        server c_api:8001 weight=1 max_fails=3 fail_timeout=30s;
+        server api:8001 weight=1 max_fails=3 fail_timeout=30s;
     }
 
     upstream client-app {
@@ -101,6 +101,9 @@ http {
     server {
         listen 443;
         server_name cdn.local.carpedalan.com;
+        location /report.html {     
+            root /assets;
+        }
         location / {     
             add_header  Content-Encoding  gzip;  
             root /assets;
