--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
     "migrateAndStart": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
-    "start": "./scripts/development/start.sh",
+    "start": "yarn && docker-compose up --build -d && ./scripts/development/start.sh",
     "start:prod": "MIGRATING=true NODE_ENV=production ./scripts/migrate.sh && NODE_ENV=production node .",
     "u": "docker-compose up",
     "d": "docker-compose down",
@@ -39,9 +39,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@types/node": "^13.1.5",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@types/node": "^13.1.6",
     "babel-eslint": "^10.0.3",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-preset-jest": "^24.9.0",
@@ -49,27 +49,22 @@
     "cypress-dark": "^1.7.14",
     "cypress-file-upload": "^3.5.3",
     "dtsgenerator": "^2.3.2",
-    "eslint": "^5.13.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.7.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "fs-extra": "^7.0.1",
-    "glob": "7.1.3",
-    "happypack": "^5.0.1",
-    "husky": "^1.3.1",
-    "jest": "^24.1.0",
-    "jest-junit": "^6.2.1",
-    "lighthouse": "^4.1.0",
-    "lint-staged": "^8.1.3",
-    "nodemon": "^1.18.9",
-    "openapi-response-validator": "^3.7.0",
-    "prettier": "^1.16.4",
-    "prettier-eslint": "^8.8.2",
-    "superagent": "^5.0.5",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "husky": "^4.0.9",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.5.0",
+    "openapi-response-validator": "^4.0.0",
+    "prettier": "^1.19.1",
+    "prettier-eslint": "^9.0.1",
+    "superagent": "^5.2.1",
     "supertest": "^4.0.2",
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
@@ -78,11 +73,11 @@
     "typescript": "^3.7.4"
   },
   "dependencies": {
-    "@pulumi/aws": "^1.6.0",
-    "@pulumi/awsx": "^0.18.12",
-    "@pulumi/pulumi": "^1.3.1"
+    "@pulumi/aws": "^1.18.0",
+    "@pulumi/awsx": "^0.18.14",
+    "@pulumi/pulumi": "^1.8.1"
   },
   "optionalDependencies": {
-    "cypress": "3.2.0"
+    "cypress": "3.8.2"
   }
 }
