--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Carpe Dalan",
   "main": "index.js",
   "author": "",
-  "license": "ISC",
+  "private": true,
   "scripts": {
     "setup": "./scripts/setup.sh",
     "lint": "eslint db imageResizer scripts server shared  --ext .js,.jsx",
@@ -27,7 +27,6 @@
     "test-multiple": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=config.json",
     "updateConfig": "aws s3 cp .env-prod s3://configurations-pipeline/.env --profile carpedev"
   },
-
   "jest": {
     "coverageThreshold": {
       "global": {
@@ -58,25 +57,16 @@
       "<rootDir>/api-v1/setup/setupTests.js"
     ]
   },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "eslint --fix",
-      "git add"
-    ]
-  },
   "devDependencies": {
     "codecov": "^3.3.0",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.17.1",
     "eslint-plugin-jest": "^22.11.1",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
-    "husky": "^1.3.1",
     "jest": "^24.7.1",
     "json-schema-to-typescript": "^6.1.3",
-    "lint-staged": "^8.1.5",
     "nodemon": "^1.18.11",
     "openapi-response-validator": "^3.7.0",
     "prettier": "^1.17.0",
@@ -103,11 +93,11 @@
     "express-winston": "^3.1.0",
     "knex": "^0.16.5",
     "lodash": "^4.17.11",
-    "logrocket": "^0.6.20",
+    "logrocket": "^1.0.6",
     "pg": "^7.9.0",
     "swagger-ui-express": "^4.0.2",
     "uuid": "^3.3.2",
     "winston": "^3.2.1",
-    "winston-loggly-bulk": "https://github.com/loggly/winston-loggly-bulk.git#3.x"
+    "winston-loggly-bulk": "^3.0.1"
   }
 }
