Setup integration test to use docker-compose separate of main dev docker-compose setup.

--- a/.env.test
+++ b/.env.test
@@ -5,7 +5,7 @@ PG_HOST=localhost
 PG_USER=postgres
 PG_PASSWORD=postgres
 PG_DATABASE=carpedalan
-PG_PORT=5555
+PG_PORT=5432
 PORT=3002
 AWS_ACCESS_KEY_ID=key
 AWS_SECRET_ACCESS_KEY=secret
@@ -15,3 +15,5 @@ LOG_LEVEL=info
 CDN_DOMAIN=photos.local.carpedalan.com
 DOMAIN=local.carpedalan.com
 CLOUDFRONT_KEY_ID=APKAIUIJTQRAIWFPJFEA
+SESSION_SECRET=secret
+COMPOSE_PROJECT_NAME='cd_test'
