--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "setup": "./scripts/setup.sh",
     "lint": "eslint db imageResizer scripts server shared  --ext .js,.jsx",
-    "integration": "NODE_ENV=test PG_HOST=localhost PG_PORT=5555 jest -c jestrc.js --runInBand",
+    "integration": "COMPOSE_PROJECT_NAME=cd_test docker-compose -f docker-compose.integration.yml build && COMPOSE_PROJECT_NAME=cd_test docker-compose -f docker-compose.integration.yml run api yarn integration",
     "integration:ci": "PG_HOST=localhost NODE_ENV=ci jest -c jestrc.js --runInBand --verbose",
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
     "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
@@ -43,8 +43,6 @@
     "@babel/preset-env": "^7.8.3",
     "@types/node": "^13.1.6",
     "babel-eslint": "^10.0.3",
-    "babel-plugin-dynamic-import-node": "^2.3.0",
-    "babel-preset-jest": "^24.9.0",
     "codecov": "^3.6.1",
     "cypress-dark": "^1.7.14",
     "cypress-file-upload": "^3.5.3",
